--- a/client/views/application/layout.html
+++ b/client/views/application/layout.html
@@ -1,5 +1,6 @@
 <template name="layout">
   <div class="container">
+    {{>errors}}
     {{>header}}
     <div id="main" class="row-fluid">
       {{>yield}}
