--- a/client/views/application/layout.html
+++ b/client/views/application/layout.html
@@ -1,7 +1,7 @@
 <template name="layout">
   <div class="container">
-    {{>errors}}
     {{>header}}
+    {{meteorErrors}}
     <div id="main" class="row-fluid">
       {{>yield}}
     </div>
