--- a/client/views/posts/post_item.html
+++ b/client/views/posts/post_item.html
@@ -1,10 +1,12 @@
 <template name = 'postItem'>
     <div class = 'post'>
+        <a href="#" class='upvote btn {{upvotedClass}}'>vote up!</a>
         <div class='post-content'>
             <h3>
                 <a href="{{url}}">{{title}}</a><span>{{domain}}</span>
             </h3>
             <p>
+                {{pluralize votes 'Vote'}},
                 submitted by {{author}}
                 <a href="{{pathFor 'postPage'}}">{{commentsCount}} comments</a>
                 <!-- {{#if ownPost}} -->
