--- a/client/views/posts/post_list.html
+++ b/client/views/posts/post_list.html
@@ -1,7 +1,16 @@
 <template name="postsList">
     <div class="posts">
+        <div class="wrapper">
         {{#each posts}}
             {{>postItem}}
         {{/each}}
+        </div>
+        {{# if nextPath}}
+            <a class='load-more' href="{{nextPath}}">Load More</a>
+        <!--{{else}}-->
+            <!--{{#unless ready}}-->
+                <!--{{>spinner}}-->
+            <!--{{/unless}}-->
+        {{/if}}
     </div>
 </template>
